Removendo repetições de twittes

--- a/src/main/webapp/timeline.xhtml
+++ b/src/main/webapp/timeline.xhtml
@@ -12,10 +12,9 @@
     <h:body>
 
 
-        <h:outputText value="MAX_ID =   #{controladorTwitter.max_id}" /><br></br><br></br>
-
-        <h:outputText value="SEGUIDORES =   #{controladorTwitter.seguidores}" /><br></br><br></br>
+        <h:outputText value="TODOS OS ID_STR #{controladorTwitter.todosTweets()}" /><br></br><br></br>
         
+   <h:outputText value="#{controladorTwitter.rodar()}" /><br></br><br></br>
 
 
 
