Verificando as menções

--- a/src/main/webapp/timeline.xhtml
+++ b/src/main/webapp/timeline.xhtml
@@ -14,7 +14,8 @@
 
         <h:outputText value="TODOS OS ID_STR #{controladorTwitter.todosTweets()}" /><br></br><br></br>
         
-   <h:outputText value="#{controladorTwitter.rodar()}" /><br></br><br></br>
+   <h:outputText value="#{controladorTwitter.rodar()}" /><br></br><br></br> <br></br><br></br>
+   <h:outputText value="#{controladorTwitter.mensao()}" /><br></br><br></br>
 
 
 
