--- a/src/main/webapp/timeline.xhtml
+++ b/src/main/webapp/timeline.xhtml
@@ -12,12 +12,11 @@
     <h:body>
 
 
-        <h:outputText value="TODOS OS ID_STR #{controladorTwitter.todosTweets()}" /><br></br><br></br>
-        
-   <h:outputText value="#{controladorTwitter.rodar()}" /><br></br><br></br> <br></br><br></br>
-   <h:outputText value="#{controladorTwitter.mensao()}" /><br></br><br></br>
-
-
+     
+        <h:outputText value="SEGUIDORES #{controladorTwitter.seguidores}" /><br></br><br></br> 
+        <h:outputText value="TODOS OS TWITTES #{controladorTwitter.rodar()}" /><br></br><br></br> <br></br><br></br>
+        <h:outputText value="MENSIONADOS #{controladorTwitter.mensao()}" /><br></br><br></br>
+        <h:outputText value="TABULACAO DE MENSOES  #{controladorTwitter.tabularMencao()}" /><br></br><br></br>
 
     </h:body>
 </html>
