--- a/src/main/webapp/timeline.xhtml
+++ b/src/main/webapp/timeline.xhtml
@@ -13,9 +13,7 @@
 
 
      
-        <h:outputText value="SEGUIDORES #{controladorTwitter.seguidores}" /><br></br><br></br> 
-        <h:outputText value="TODOS OS TWITTES #{controladorTwitter.rodar()}" /><br></br><br></br> <br></br><br></br>
-        <h:outputText value="MENSIONADOS #{controladorTwitter.mensao()}" /><br></br><br></br>
+        <h:outputText value="#{controladorTwitter.iniciar()}" /><br></br><br></br>
         <h:outputText value="TABULACAO DE MENSOES  #{controladorTwitter.tabularMencao()}" /><br></br><br></br>
      
     </h:body>
